fix sidebar styling, make each card a stretched link

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -62,3 +62,19 @@
 /* Recipe Show Page
    ========================================================================== */
 
+@media (min-width: 992px) {
+	.card-img {
+		max-height: 150px;
+	}	
+}
+
+/* Sidebar
+   ========================================================================== */
+
+aside .card a {
+	color: #999;
+}
+
+aside .card a:hover {
+	color: #666;
+}
